@@ -1,3 +1,4 @@
+2815 [MessageBoxEx]         cosmetics
 2813 [x265]                 added support for --tune grain
 2812 [OneClick]             fixed not updating the output folder path properly (regression of 2807)
 2811 [OneClick]             fixed "-" button behaviour if only one track is available (regression of 2808)
